--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -430,6 +430,24 @@
     "timerReset": "Reset",
     "notFound": "Recipe not found"
   },
+  "ingredient": {
+    "notFound": "Ingredient not found",
+    "code": "Code: {{code}}",
+    "namespace": "Namespace: {{namespace}}",
+    "storageGuidance": "Storage guidance",
+    "shelfLife": "Shelf life",
+    "days": "{{count}} days",
+    "storageLocation": "Storage location",
+    "storage": {
+      "pantry": "Pantry",
+      "fridge": "Fridge",
+      "freezer": "Freezer",
+      "spicecabinet": "Spice cabinet"
+    },
+    "translations": "Translations",
+    "varieties": "Varieties",
+    "varietyCode": "Variety code: {{code}}"
+  },
   "search": {
     "title": "Search",
     "resultsTitle": "Search results",
