Add creator and vendor role tabs with gated dashboards

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -150,7 +150,29 @@
     "home": "الرئيسية",
     "kitchen": "المطبخ",
     "profile": "الملف الشخصي",
-    "lists": "القوائم"
+    "lists": "القوائم",
+    "creator": "منشئ",
+    "vendor": "بائع"
+  },
+  "creator": {
+    "title": "لوحة تحكم المنشئ",
+    "description": "اعرض ميزات المنشئ وبيانات الملف المؤقتة بينما نضيف المزيد من الأدوات.",
+    "profileHeading": "لمحة عن الملف الشخصي",
+    "nameLabel": "الاسم",
+    "emailLabel": "البريد الإلكتروني",
+    "userTypeLabel": "نوع المستخدم",
+    "missingField": "غير متوفر",
+    "badge": "حساب منشئ"
+  },
+  "vendor": {
+    "title": "لوحة تحكم البائع",
+    "description": "راجع معلومات البائع مع تفاصيل الملف المؤقتة حتى تصبح البيانات النهائية جاهزة.",
+    "profileHeading": "لمحة عن الملف الشخصي",
+    "nameLabel": "الاسم",
+    "emailLabel": "البريد الإلكتروني",
+    "userTypeLabel": "نوع المستخدم",
+    "missingField": "غير متوفر",
+    "badge": "حساب بائع"
   },
   "home": {
     "title": "الرئيسية",
