Add nutrition goals onboarding and profile settings

--- a/i18n/locales/tl.json
+++ b/i18n/locales/tl.json
@@ -100,6 +100,29 @@
       "american": "American",
       "saveError": "Hindi namin ma-save ang iyong cuisine preferences. Pakisubukan ulit."
     },
+    "nutritionGoals": {
+      "title": "Nutrition goals",
+      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
+      "starter": "Starter profile",
+      "categories": "Goal categories",
+      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
+      "daily": "Daily targets",
+      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
+      "calories": "Calories (kcal)",
+      "protein": "Protein (g)",
+      "fat": "Fat (g)",
+      "carbs": "Carbohydrates (g)",
+      "secondary": "Secondary metrics",
+      "secondaryHelper": "Track these only if they’re relevant to your plan.",
+      "display": "Display preferences",
+      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
+      "perMeal": "Show per-meal targets",
+      "proteinOnly": "Show protein-only view",
+      "hideCalories": "Hide calorie totals",
+      "warnings": "Warnings vs suggestions",
+      "mealCount": "Meals per day",
+      "trainingHelper": "We’ll adjust for training vs rest days automatically."
+    },
     "partnerOnboarding": {
       "creatorIntroTitle": "Maligayang pagdating, creator",
       "creatorIntroBody": "Iaayos namin ang mga tool para matulungan kang mag-publish ng recipes at kumonekta sa mga cook.",
@@ -261,6 +284,19 @@
     "errorLoadProfile": "Hindi namin ma-load ang iyong profile details. Pakisubukan ulit mamaya.",
     "language": "Wika",
     "languageDesc": "Piliin ang nais mong wika ng app. Agad na nau-update ang nilalaman.",
+    "nutritionTitle": "Nutrition goals",
+    "nutritionDesc": "Set your intent now and adjust targets later as you learn what works.",
+    "nutritionStarter": "Starter profile",
+    "nutritionCategories": "Goal categories",
+    "nutritionCategoriesHelper": "Select every category that fits; we’ll balance conflicts for you.",
+    "nutritionTargets": "Daily targets",
+    "nutritionSecondary": "Secondary metrics",
+    "nutritionDisplay": "Display preferences",
+    "nutritionPreview": "Per-meal preview: {{calories}} kcal · {{protein}} g protein",
+    "nutritionTrainingHint": "We’ll adapt suggestions for training and rest days automatically.",
+    "saveNutritionGoals": "Save nutrition goals",
+    "nutritionSaveSuccess": "Nutrition goals updated for your profile.",
+    "nutritionSaveError": "We couldn’t save your nutrition goals. Please try again.",
     "base": "Karaniwan",
     "baseDesc": "Balanse para sa karamihan ng mga mambabasa.",
     "highContrast": "Gamitin ang high contrast",
