--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -208,6 +208,29 @@
       "delivery": "Coordonner avec la livraison ou les kits",
       "saveError": "Nous n’avons pas pu enregistrer vos préférences de planification. Veuillez réessayer."
     },
+    "nutritionGoals": {
+      "title": "Nutrition goals",
+      "subtitle": "Tell us how you want to eat so we can surface the right recipes and hints.",
+      "starter": "Starter profile",
+      "categories": "Goal categories",
+      "categoriesHelper": "Pick every bucket that sounds relevant—we’ll resolve overlaps for you.",
+      "daily": "Daily targets",
+      "dailyHelper": "Set the metrics that matter most. Leave anything blank and we’ll adapt dynamically.",
+      "calories": "Calories (kcal)",
+      "protein": "Protein (g)",
+      "fat": "Fat (g)",
+      "carbs": "Carbohydrates (g)",
+      "secondary": "Secondary metrics",
+      "secondaryHelper": "Track these only if they’re relevant to your plan.",
+      "display": "Display preferences",
+      "displayHelper": "Choose what to see in meal views. We’ll still guide you silently.",
+      "perMeal": "Show per-meal targets",
+      "proteinOnly": "Show protein-only view",
+      "hideCalories": "Hide calorie totals",
+      "warnings": "Warnings vs suggestions",
+      "mealCount": "Meals per day",
+      "trainingHelper": "We’ll adjust for training vs rest days automatically."
+    },
     "partnerOnboarding": {
       "creatorIntroTitle": "Bienvenue, créateur",
       "creatorIntroBody": "Nous adapterons les outils pour vous aider à publier des recettes et à échanger avec les cuisiniers.",
@@ -388,6 +411,19 @@
     "errorLoadProfile": "Nous n'avons pas pu charger les détails de votre profil. Veuillez réessayer sous peu.",
     "language": "Langue",
     "languageDesc": "Choisissez la langue de l’application. Le contenu se met à jour instantanément.",
+    "nutritionTitle": "Nutrition goals",
+    "nutritionDesc": "Set your intent now and adjust targets later as you learn what works.",
+    "nutritionStarter": "Starter profile",
+    "nutritionCategories": "Goal categories",
+    "nutritionCategoriesHelper": "Select every category that fits; we’ll balance conflicts for you.",
+    "nutritionTargets": "Daily targets",
+    "nutritionSecondary": "Secondary metrics",
+    "nutritionDisplay": "Display preferences",
+    "nutritionPreview": "Per-meal preview: {{calories}} kcal · {{protein}} g protein",
+    "nutritionTrainingHint": "We’ll adapt suggestions for training and rest days automatically.",
+    "saveNutritionGoals": "Save nutrition goals",
+    "nutritionSaveSuccess": "Nutrition goals updated for your profile.",
+    "nutritionSaveError": "We couldn’t save your nutrition goals. Please try again.",
     "base": "Standard",
     "baseDesc": "Tailles équilibrées pour la plupart des lecteurs."
   },
